syntax = "proto3";
import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
package user;

service UserService {
    rpc listUser (UserRequest) returns (UserResponse) {}
    rpc createUser (createUserRequest) returns (createUserResponse);
}


// List User
message UserRequest {
    int32 limit = 1; 
    int32 offset = 2; 
    string name = 3; 
}

message UserResponse {
    int32 status = 1;
    UserRes data = 2;
}

message UserRes {
    int32 count = 1;
    repeated UserItem rows = 2; 
}

message UserItem {
    string name = 1;
    int32 age = 2;
}


// Create User
message createUserRequest {
   string username = 1;
   string password = 2;
}
message createUserResponse {
   string mess = 1;
}